@@ -1,5 +1,8 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+	- pass in the write fd set as except fd set under windows. windows
+          is so uncontrollably lame that it requires this.
+
 3.41 Fri May 23 18:42:54 CEST 2008
 	- work around an (undocumented) bug in winsocket select: if you
           provide only empty fd sets then select returns WSAEINVAL. how sucky.
